--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -411,7 +411,7 @@
         <label><input type="radio" required="true" name="q39" value="5"/>5) Затрудняюсь ответить</label><br>
         <br><br>
 
-        <label>40. Кем Вы работаете? Напишите название должности. <input class="input_text_field" type="text" name="q40" value="" required="true"></label>
+        <label>40. Кем Вы работаете? Напишите название должности. <input class="input_text_field" type="text" name="q40" value=""></label>
         <br><br>
 
         <label>41. К какой отрасли относится организация, в которой Вы работаете? Отметьте один ответ.</label>
